# firn

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
arch/x86/: Cargo.toml
arch/x86/macros/: Cargo.toml
arch/x86/macros/src/: arith_instr.rs  instr.rs  lib.rs  new_instr.rs  shift_instr.rs
arch/x86/src/: arith.rs  cpu.rs  device.rs  flags.rs  instr.rs  lib.rs  modrm.rs  opcodes.rs  system.rs
arch/x86/src/device/: cmos.rs  pic.rs
arch/x86/src/instr/: arith.rs  conditionals.rs  control.rs  flags.rs  ports.rs  semaphores.rs  shifts.rs  stack.rs  strings.rs  transfer.rs
core/: Cargo.toml
core/macros/: Cargo.toml
core/macros/src/: io_port.rs  io_ports.rs  lib.rs
core/src/: cpu.rs  device.rs  lib.rs  mem.rs  system.rs
core/src/mem/: basic.rs  eeprom.rs  map.rs
crates/arch_x86/: Cargo.toml
crates/arch_x86/src/: modrm.rs  opcodes.rs
crates/arch_x86/src/instr/: stack.rs  strings.rs
crates/core/src/: system.rs
crates/core/src/mem/: basic.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/x86/: Cargo.toml
crates/x86/src/: cpu.rs  instr.rs  lib.rs  regs.rs
crates/x86/src/device/: cmos.rs
crates/x86/src/instr/: arith.rs  flags.rs  ports.rs
desktop/: Cargo.toml
desktop/src/: main.rs
macros/: Cargo.toml
macros/src/: io_port.rs  lib.rs
src/: cpu.rs  lib.rs  mem.rs  num.rs
src/arch/: x86.rs
src/arch/x86/: cpu.rs  device.rs  flags.rs  instr.rs  modrm.rs  opcodes.rs  regs.rs
src/arch/x86/device/: cmos.rs
src/mem/: basic.rs  eeprom.rs  map.rs  range.rs
windows/: Cargo.toml
windows/src/: main.rs
(+7 files in other folders)
