[package]
name = "firn"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "desktop",
    "macros",

    "arch/x86",
]

[dependencies]
firn-core = { path = "core" }
firn-macros = { path = "macros" }
firn-arch-x86 = { path = "arch/x86", optional = true }

[features]
arch-x86 = ["firn-arch-x86"]
