[package]
name = "firn-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
"firn" = { path = "..", features = ["arch-x86"] }

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
